--- a/Views/Furnitures/Index.cshtml
+++ b/Views/Furnitures/Index.cshtml
@@ -6,6 +6,13 @@
 
 <h1>Index</h1>
 
+<div class="borber">
+    <label for="search" class="border">
+        <input type="text" id="search" class="border border-0">
+        <i class="bi bi-search"></i>
+    </label>
+</div>
+
 <p>
     <a asp-action="Create">Create New</a>
 </p>
